--- a/ahp/1141BWaltersMillRd.html
+++ b/ahp/1141BWaltersMillRd.html
@@ -6,7 +6,8 @@
 <title>Quest Homebuilders | Welcome Home</title>
 <link rel="stylesheet" href="../css/foundation.min.css">
 <link rel="stylesheet" href="../css/colors.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
+
 </head>
 <body>
 
@@ -21,7 +22,7 @@
     <li><a href="#">House Types</a>
       <ul class="menu">
         <li><a href="../htp/Hamilton.html">Hamilton</a></li>
-        <li><a href="../htp/Bristol.html">Bristol 2</a></li>
+        <li><a href="../htp/Bristol2.html">Bristol 2</a></li>
         <li><a href="../htp/Danville.html">Danville</a></li>
       </ul>
     </li>
@@ -46,40 +47,37 @@
 <li><a href="../index.html">Home</a></li>
 <li><a href="../index.html#AH">Available Homes</a></li>
 <li>
-<span class="show-for-sr">Current: </span> 1805 Van Bibber Rd
+<span class="show-for-sr">Current: </span> 1141B Walters Mill Road
 </li>
 </ul>
 </nav>
 </div>
 <div class="row">
 <div class="medium-6 columns">
-<img class="thumbnail" src="../img/AvailableHomes/1805VB/1805VanBibber.png">
+<img class="thumbnail" src="../img/AvailableHomes/1141BWM/1141BWaltersMillRd.jpg">
 <div class="row small-up-4">
 <div class="column">
-<img class="thumbnail" src="../img/AvailableHomes/1805VB/1805VB_Drawing.png">
+<img class="thumbnail" src="../img/AvailableHomes/1141BWM/">
 </div>
 <div class="column">
-<img class="thumbnail" src="../img/AvailableHomes/1805VB/1805VB_Drawing.png">
+<img class="thumbnail" src="../img/AvailableHomes/1141BWM/">
 </div>
 <div class="column">
-<img class="thumbnail" src="../img/AvailableHomes/1805VB/1805VanBibber.png">
+<img class="thumbnail" src="../img/AvailableHomes/1141BWM/">
 </div>
 <div class="column">
-<img class="thumbnail" src="../img/AvailableHomes/1805VB/1805VB_Drawing.png">
+<img class="thumbnail" src="../img/AvailableHomes/1141BWM/">
 </div>
 </div>
 </div>
 <div class="medium-6 large-5 columns">
-<h3>1805 Van Bibber Rd</h3>
+<h3>1141B Walters Mill Road</h3>
 <p>
   <ul>
     <li>Single-Family Home</li>
     <li>4 Bedrooms</li>
-    <li>2 full, 1 partial Bathrooms</li>
-    <li>2,283 sqft</li>
-    <li>$148/sqft</li>
-    <li>Lot size: 0.71 acres</li>
-    <li>Built in 2016</li>
+    <li>3 full, 1 partial Bathrooms</li>
+    <li>3,049 sqft</li>
   </ul>
 </p>
 
@@ -99,12 +97,7 @@
 <h4>Details</h4>
 <div class="media-object stack-for-small">
 <div class="media-object-section">
-<p>Brand new home! Spacious colonial with 2283 sq ft of living space
-  available immediately! .70 Acre private lot- No HOA. Wonderful open
-  space in the family rm/ kitchen with morning room extension! Granite
-  countertops and stainless steel appliances in kitchen. Master suite
-  offers super bath with double vanity and walk in closet. Convenient
-  2nd floor laundry! 9' Ceilings on main level.</p>
+<p>Enter Description here</p>
 </div>
 </div>
 </div>
@@ -112,7 +105,7 @@
 <div class="row medium-up-3 large-up-5">
 <div class="column">
 <img class="thumbnail" src="http://placehold.it/350x200">
-<h5>1141B Walters Mill Rd</h5>
+<h5>1805 Van Bibber Road</h5>
 <p>Small Description Here</p>
 <a href="#" class="button hollow tiny expanded">Read More Here</a>
 </div>
@@ -162,10 +155,8 @@
 <script src="../js/foundation.js"></script>
 <script>
       $(document).foundation();
-    var elem = new Foundation.Orbit(element, options);
+  var elem = new Foundation.Orbit(element, options);
     $('#element').foundation('changeSlide', isLTR, chosenSlide, idx);
     </script>
-  <script type="text/javascript" src="https://intercom.zurb.com/scripts/zcom.js"></script>
-
 </body>
 </html>
